Refined GUI, moved stuff around